tried to fix icon spacing

--- a/main.css
+++ b/main.css
@@ -177,5 +177,5 @@ ul {
 }
 #icon {
         display: inline-block;
-        margin: 10px 1px;
+        margin: 10px 10px;
 }
